# docker-python-guide

./: .gitignore  BRANCH-WORKFLOW.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT-STATUS.md  README-module-04.md  README.md  RESTRUCTURE_SUMMARY.md  cleanup.ps1  cleanup.sh  deploy.ps1  deploy.sh  pyproject.toml  requirements.txt  setup-modules.ps1  test-app.ps1  test-app.sh
.github/workflows/: build.yml  fastapi-cicd.yml  flask-cicd.yml
docs/: dockerfile-guide.md  git-workflow.md  module-planning.md  optimization-guide.md  security-guide.md
examples/01-flask-basic/: Dockerfile
examples/02-fastapi-modern/: Dockerfile
examples/02-flask-advanced/: Dockerfile  README.md  app.py
examples/03-fastapi-basic/: Dockerfile  README.md  app.py
examples/django-blog/: .env.example  Dockerfile  README.md  docker-compose.yml  init.sql  nginx.conf  requirements.txt
examples/django-blog/blogproject/blog/: admin.py  apps.py  models.py  urls.py  views.py
examples/django-blog/blogproject/blogproject/: settings.py  urls.py
examples/fastapi-api/: Dockerfile  app.py  gunicorn_config.py  requirements.txt
examples/fastapi-app/: README.md  requirements.txt
examples/fastapi-app/.github/workflows/: ci.yml
examples/fastapi-basic/: Dockerfile  README.md  main.py
examples/fastapi-cicd/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/fastapi-cicd/tests/: locustfile.py  test_app.py
examples/fastapi-deployment/: README.md  main.py
examples/fastapi-modern/: Dockerfile_new  README.md  compose.yaml  main.py
examples/fastapi-quality/: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements-dev.txt
examples/fastapi-redis/: Dockerfile  README.md  docker-compose.yml  main.py  main_simple.py
examples/flask-app/: README.md  requirements.txt
examples/flask-app/.github/workflows/: ci.yml
examples/flask-app/tests/: test_app.py
examples/flask-basic/: Dockerfile  README.md  app.py  compose.yaml
examples/flask-cicd/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/flask-cicd/tests/: test_app.py
examples/flask-deployment/: README.md  app_simple.py
examples/flask-k8s/: Dockerfile  README.md
examples/flask-postgres/: Dockerfile  README.md  app.py  compose_simple.yaml  docker-compose.yml  init.sql  requirements.txt
examples/flask-quality/: .pre-commit-config.yaml  Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
exercises/01-basic-dockerfile/: Dockerfile  README.md  calculator.py  requirements.txt
exercises/02-multi-stage-builds/: Dockerfile  README.md  requirements-dev.txt  requirements.txt
exercises/02-multi-stage-builds/app/: __init__.py  main.py  models.py  utils.py
k8s/: app-deployment.yaml  app-service.yaml  namespace.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-pv.yaml  postgres-secret.yaml  postgres-service.yaml
scripts/: setup.ps1  setup.sh
templates/: Dockerfile.basic  Dockerfile.multistage
tests/: test_basic.py
